# Game_of_Life

./: CMakeLists.txt  README.md  gol.cpp  gol.hpp
includes/: StdBoardBits.hpp  boardBits.hpp  cells.hpp  gol.hpp
src/: StdBoardBits.cpp  conwayInput.txt  gol.cpp  run.cpp
